fix: removed the finance from the navbar and also fixed the scrollbar width

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,13 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   scroll-behavior: smooth;
 }
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+} 
 
 a {
   color: inherit;
